Build: (0084620) fix(focus): change input width (0px causes bugs on mobiles)

--- a/css/style.scss
+++ b/css/style.scss
@@ -50,7 +50,7 @@ html, body {
 
     #input {
         all: unset;
-        width: 0;
+        width: 0.5px; // Required to avoid bug on mobile
         padding: 0;
         margin: 0;
         color: transparent;
